--- a/poker-game.cabal
+++ b/poker-game.cabal
@@ -57,6 +57,8 @@ library
     , mtl
     , poker-base
     , poker-handhistory
+    , prettyprinter
+    , text
   hs-source-dirs: src
   default-language:    Haskell2010
 
@@ -64,7 +66,8 @@ test-suite all-tests
   type: exitcode-stdio-1.0
   main-is: Driver.hs
   other-modules:
-      Paths_poker_handhistory
+      Test.Poker.Game.Bovada
+      Paths_poker_game
   hs-source-dirs:
       test
   default-extensions: ConstraintKinds DataKinds DeriveDataTypeable DeriveFunctor DeriveGeneric DeriveTraversable EmptyCase FlexibleContexts GADTs LambdaCase LiberalTypeSynonyms PartialTypeSignatures PatternSynonyms PackageImports PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TypeApplications TypeOperators TypeFamilies UnicodeSyntax ViewPatterns TemplateHaskell
@@ -77,10 +80,16 @@ test-suite all-tests
     , filepath
     , hspec
     , megaparsec
+    , lens
+    , mtl
     , poker-base
     , poker-handhistory
+    , poker-game
+    , pretty-show
+    , prettyprinter
     , regex-base
     , regex-posix
+    , safe-money
     , tasty
     , tasty-hspec
     , tasty-hunit
