--- a/cabal.project
+++ b/cabal.project
@@ -1,7 +1,7 @@
 packages:
  *.cabal
- ../poker-base
- ../poker-handhistory
+ ../base
+ ../history
 
 index-state: 2021-08-08T02:21:16Z
 with-compiler: ghc-8.10.4
