Add back some normalise; fix build

--- a/poker-game.cabal
+++ b/poker-game.cabal
@@ -108,7 +108,8 @@ test-suite all-tests
     , megaparsec
     , lens
     , mtl
-    , poker-base
+    , base
+    , poker
     , poker-handhistory
     , poker-game
     , pretty-show
