--- a/poker-game.cabal
+++ b/poker-game.cabal
@@ -27,7 +27,7 @@ library
   -- other-modules:
   -- other-extensions:
   build-depends:
-    base >=4.14 && <=4.15
+    base
     , containers
     , lens
     , mtl
@@ -73,7 +73,7 @@ test-suite all-tests
   default-extensions: ConstraintKinds DataKinds DeriveDataTypeable DeriveFunctor DeriveGeneric DeriveTraversable EmptyCase FlexibleContexts GADTs LambdaCase LiberalTypeSynonyms PartialTypeSignatures PatternSynonyms PackageImports PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TypeApplications TypeOperators TypeFamilies UnicodeSyntax ViewPatterns TemplateHaskell
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-unticked-promoted-constructors
   build-depends:
-      base >=4.7 && <5
+      base
     , containers
     , directory
     , extra
@@ -92,6 +92,7 @@ test-suite all-tests
     , regex-posix
     , safe-money
     , tasty
+    , tasty-discover
     , tasty-hspec
     , tasty-hunit
     , text
