--- a/poker-game.cabal
+++ b/poker-game.cabal
@@ -34,6 +34,7 @@ library
     , prettyprinter
     , text
   hs-source-dirs: src
+  ghc-options: -j8 +RTS -A128m -n2m -RTS -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-unticked-promoted-constructors
   default-language:    Haskell2010
   default-extensions: ConstraintKinds
                       DataKinds
